# regulation-actor-arena

./: .gitignore  README.md  credentials.json  pyproject.toml  test.json
backend/: requests.py  serializers.py  settings.py  urls.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
committees/: admin.py  models.py  serializers.py  urls.py  views.py
committees/migrations/: 0001_initial.py  0002_targetgroup.py  0002_usertype_include_in_sentiment_analysis.py
countries/: models.py  serializers.py  urls.py  views.py
countries/migrations/: 0001_initial.py
feedbacks/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
feedbacks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_feedback_tr_number.py  0004_alter_feedback_tr_number_and_more.py  0005_alter_feedback_publication_object.py  0006_feedback_feedback_lemmatized_feedback_named_entities.py
initiatives/: admin.py  models.py  serializers.py  urls.py  views.py
initiatives/migrations/: 0001_initial.py  0002_initial.py  0003_alter_initiative_initiative_status.py  (+3 more)
named_entities/: apps.py  models.py
policy_areas/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
publication_documents/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
scripts/: fetch_countries.py  fetch_suggestion_topics.py  fetch_user_types.py
sentiments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
topics/: admin.py  models.py  serializer.py  urls.py  views.py
(+40 files in other folders)
