[tool.poetry]
name = "reroot-regulation_actor_arena"
version = "0.1.0"
description = ""
authors = ["ynnck <ylenaerts89@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
Django = "^4.1"
requests = "^2.28.1"
pyhumps = "^3.7.2"
djangorestframework = "^3.13.1"
google-cloud-translate = "^3.8.1"
googletrans = "^3.0.0"
requests-toolbelt = "^0.9.1"
google-trans-new = "^1.1.9"
vaderSentiment = "^3.3.2"
plotly = "^5.10.0"
Pillow = "^9.2.0"
pandas = "^1.4.3"
kaleido = "0.2.1"
nltk = "^3.7"
pyspellchecker = "^0.7.0"
google-cloud-language = "^2.5.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
